# xcalidraw

./: .env.example  .env.minimal  .gitignore  README.md  docker-compose.minimal.yml  docker-compose.yml  package.json
apps/api/: package.json
apps/api/src/routes/: rooms-minimal.ts
apps/api/src/services/: simple-asset-store.ts  simple-room-manager.ts
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  error.rs  main.rs
backend/src/db/: mod.rs
backend/src/middleware/: auth.rs
backend/src/routes/: auth.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx
frontend/src/stores/: authStore.ts
