[package]
name = "xcalidraw-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = [
	"runtime-tokio-rustls",
	"sqlite",
	"macros",
	"migrate",
] }
ring = { version = "0.17", features = ["std"] }
argon2 = "0.5.3"
axum = "0.8.6"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
